RESOLVED FIXED277928
[WebGPU] RenderBundleEncoder::finish does not handle repeated calls
https://bugs.webkit.org/show_bug.cgi?id=277928
Summary [WebGPU] RenderBundleEncoder::finish does not handle repeated calls
Mike Wyrzykowski
Reported 2024-08-10 23:43:04 PDT
[WebGPU] RenderBundleEncoder::finish does not handle repeated calls
Attachments
Mike Wyrzykowski
Comment 1 2024-08-10 23:43:18 PDT
Mike Wyrzykowski
Comment 2 2024-08-10 23:57:43 PDT
EWS
Comment 3 2024-08-13 08:48:54 PDT
Committed 282169@main (6fc3c742419c): <https://commits.webkit.org/282169@main> Reviewed commits have been landed. Closing PR #32009 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.