[WebGPU] RenderBundleEncoder::finish does not handle repeated calls https://bugs.webkit.org/show_bug.cgi?id=277928 radar://133539397

Reviewed by Tadeu Zagallo.

Repeated calls to GPURenderBundleEncoder.finish() would result in a new
ICB being created, which is incorrect.

* LayoutTests/fast/webgpu/nocrash/fuzz-277928-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277928.html: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277928b-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277928b.html: Added.
Add regression tests.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::finish):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::RenderPipeline::stripIndexFormat const):

Canonical link: https://commits.webkit.org/282169@main